refactor: Rename ctxgraph to ctxEco (naming conflict)
Signed-off-by: derek b moore <53102193+derekbmoore@users.noreply.github.com>

--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,9 @@
 # =============================================================================
 AUTH_REQUIRED=true
 # For Keycloak:
-OIDC_ISSUER_URL=https://keycloak.example.com/realms/ctxgraph
-OIDC_CLIENT_ID=ctxgraph-backend
-OIDC_AUDIENCE=ctxgraph
+OIDC_ISSUER_URL=https://keycloak.example.com/realms/ctxEco
+OIDC_CLIENT_ID=ctxEco-backend
+OIDC_AUDIENCE=ctxEco
 # For Azure AD (optional):
 # AZURE_AD_TENANT_ID=your-tenant-id
 # AZURE_AD_CLIENT_ID=your-client-id
@@ -18,8 +18,8 @@ OIDC_AUDIENCE=ctxgraph
 # =============================================================================
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
-POSTGRES_DB=ctxgraph
-POSTGRES_USER=ctxgraph
+POSTGRES_DB=ctxEco
+POSTGRES_USER=ctxEco
 POSTGRES_PASSWORD=changeme
 
 # =============================================================================
@@ -32,7 +32,7 @@ ZEP_API_KEY=
 # Temporal Workflow Engine
 # =============================================================================
 TEMPORAL_HOST=temporal:7233
-TEMPORAL_NAMESPACE=ctxgraph
+TEMPORAL_NAMESPACE=ctxEco
 
 # =============================================================================
 # LLM Provider (choose one)
