--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Build backend image
-        run: docker build -t ctxgraph-backend ./backend
+        run: docker build -t ctxEco-backend ./backend
 
   # Security Scan
   security-scan:
