--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y \
     build-essential \
     libmagic1 \
+    portaudio19-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
