ci: Fix PYTHONPATH for backend tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Run tests
         run: |
           cd backend
+          export PYTHONPATH=$PYTHONPATH:.
           pytest tests/ -v
 
   # Build Images
