Fix container failures: add Azure SDK, fix worker imports, add Zep config, use pgvector postgres
- Added azure-identity and azure-core to requirements.txt for VoiceLive service
- Fixed worker.py imports (removed 'backend.' prefix to match Docker volume mount)
- Fixed all workflow imports using sed (backend.* -> relative imports)
- Created backend/zep-config.yaml for Zep configuration (required for proper startup)
- Changed docker-compose postgres image to pgvector/pgvector:pg15 for vector support
- Added restart policy to worker service for better reliability
- Made Azure imports optional in voicelive_service.py with graceful error handling

All containers now running successfully:
- Backend: Up and healthy
- Postgres: Up with pgvector support
- Temporal: Up
- Temporal-UI: Up
- Worker: Up and connected to Temporal
- Zep: Up with config file mount

Azure infrastructure already configured correctly:
- PostgreSQL PG16 with pgvector extension enabled
- Zep uses config file mount (same pattern as local)
- Docker images will include fixes after rebuild and push

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,16 @@ pydantic-settings>=2.1.0
 python-jose[cryptography]>=3.3.0
 httpx>=0.26.0
 
+# Azure Services (for VoiceLive)
+azure-identity>=1.15.0
+azure-core>=1.29.5
+
+# Azure AI VoiceLive (Real-time Voice) - Optional
+# azure-ai-voicelive[aiohttp]>=1.0.0  # Uncomment if VoiceLive is needed
+
+# WebRTC for Avatar Video (Optional)
+# aiortc>=1.6.0  # Uncomment if Avatar video is needed
+
 # Agent Framework
 langchain>=0.1.0
 langgraph>=0.0.20
