--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,7 @@ jobs:
         with:
           context: ./backend
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/ctxeco/backend:latest
+          tags: ghcr.io/${{ github.repository_owner }}/opencontextgraph/backend:latest
 
   # Security Scan
   security-scan:
