Add Azure Container Apps deployment step to CI/CD workflow
- Adds deploy-azure job that runs after build-images
- Updates both backend and worker Container Apps with new image
- Uses Azure login with service principal (client-id/tenant-id/subscription-id)
- Supports environment-specific deployment (production/staging)
- Only runs on pushes to main or develop branches
- Configurable via GitHub secrets:
  - AZURE_CLIENT_ID (required)
  - AZURE_TENANT_ID (required)
  - AZURE_SUBSCRIPTION_ID (required)
  - AZURE_RESOURCE_GROUP (optional, defaults to ctxeco-rg)
  - AZURE_BACKEND_APP_NAME (optional, defaults to ctxeco-api)
  - AZURE_WORKER_APP_NAME (optional, defaults to ctxeco-worker)

This ensures Azure Container Apps automatically pull the new :latest image
after CI/CD builds and pushes the Docker image to GitHub Container Registry.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,3 +90,54 @@ jobs:
           path: ./backend
           fail-build: false  # Don't block deploy on scan for now
           severity-cutoff: high
+
+  # Deploy to Azure Container Apps
+  deploy-azure:
+    name: Deploy to Azure Container Apps
+    runs-on: ubuntu-latest
+    needs: build-images
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
+    environment:
+      name: ${{ github.ref == 'refs/heads/main' && 'production' || 'staging' }}
+    permissions:
+      contents: read
+      id-token: write
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Update Backend Container App
+        run: |
+          IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/opencontextgraph/backend:latest"
+          RESOURCE_GROUP="${{ secrets.AZURE_RESOURCE_GROUP || 'ctxeco-rg' }}"
+          BACKEND_APP_NAME="${{ secrets.AZURE_BACKEND_APP_NAME || 'ctxeco-api' }}"
+          
+          echo "Updating Container App: $BACKEND_APP_NAME with image: $IMAGE_TAG"
+          
+          az containerapp update \
+            --name "$BACKEND_APP_NAME" \
+            --resource-group "$RESOURCE_GROUP" \
+            --image "$IMAGE_TAG" \
+            --query "properties.template.containers[0].image" \
+            -o tsv
+
+      - name: Update Worker Container App
+        run: |
+          IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/opencontextgraph/backend:latest"
+          RESOURCE_GROUP="${{ secrets.AZURE_RESOURCE_GROUP || 'ctxeco-rg' }}"
+          WORKER_APP_NAME="${{ secrets.AZURE_WORKER_APP_NAME || 'ctxeco-worker' }}"
+          
+          echo "Updating Container App: $WORKER_APP_NAME with image: $IMAGE_TAG"
+          
+          az containerapp update \
+            --name "$WORKER_APP_NAME" \
+            --resource-group "$RESOURCE_GROUP" \
+            --image "$IMAGE_TAG" \
+            --query "properties.template.containers[0].image" \
+            -o tsv
