--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,12 +108,33 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
+      - name: Validate Azure Secrets
+        run: |
+          if [ -z "${{ secrets.AZURE_CLIENT_ID }}" ]; then
+            echo "❌ Error: AZURE_CLIENT_ID secret is not set"
+            echo "   Please set it in Repository Settings → Secrets and variables → Actions"
+            exit 1
+          fi
+          if [ -z "${{ secrets.AZURE_TENANT_ID }}" ]; then
+            echo "❌ Error: AZURE_TENANT_ID secret is not set"
+            echo "   Please set it in Repository Settings → Secrets and variables → Actions"
+            exit 1
+          fi
+          if [ -z "${{ secrets.AZURE_SUBSCRIPTION_ID }}" ]; then
+            echo "❌ Error: AZURE_SUBSCRIPTION_ID secret is not set"
+            echo "   Please set it in Repository Settings → Secrets and variables → Actions"
+            exit 1
+          fi
+          echo "✅ All required Azure secrets are configured"
+      
       - name: Azure Login
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          # Optional: Use service principal secret if provided, otherwise tries certificate or managed identity
+          allow-no-subscriptions: false
 
       - name: Get Resource Group from Key Vault (if available)
         id: get-config
