--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,31 +110,47 @@ jobs:
       
       - name: Validate Azure Secrets
         run: |
+          # Check for AZURE_CREDENTIALS (preferred method, matches engram pattern)
+          if [ -n "${{ secrets.AZURE_CREDENTIALS }}" ]; then
+            echo "✅ Using AZURE_CREDENTIALS for authentication"
+            exit 0
+          fi
+          
+          # Fall back to individual secrets
           if [ -z "${{ secrets.AZURE_CLIENT_ID }}" ]; then
             echo "❌ Error: AZURE_CLIENT_ID secret is not set"
-            echo "   Please set it in Repository Settings → Secrets and variables → Actions"
+            echo "   Please set AZURE_CREDENTIALS (preferred) or individual secrets"
+            echo "   See .github/workflows/SECRETS.md for configuration instructions"
             exit 1
           fi
           if [ -z "${{ secrets.AZURE_TENANT_ID }}" ]; then
             echo "❌ Error: AZURE_TENANT_ID secret is not set"
-            echo "   Please set it in Repository Settings → Secrets and variables → Actions"
+            echo "   Please set AZURE_CREDENTIALS (preferred) or individual secrets"
+            echo "   See .github/workflows/SECRETS.md for configuration instructions"
             exit 1
           fi
           if [ -z "${{ secrets.AZURE_SUBSCRIPTION_ID }}" ]; then
             echo "❌ Error: AZURE_SUBSCRIPTION_ID secret is not set"
-            echo "   Please set it in Repository Settings → Secrets and variables → Actions"
+            echo "   Please set AZURE_CREDENTIALS (preferred) or individual secrets"
+            echo "   See .github/workflows/SECRETS.md for configuration instructions"
             exit 1
           fi
-          echo "✅ All required Azure secrets are configured"
+          echo "✅ All required Azure secrets are configured (using individual secrets)"
       
-      - name: Azure Login
+      - name: Azure Login (using AZURE_CREDENTIALS)
+        if: ${{ secrets.AZURE_CREDENTIALS != '' }}
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      
+      - name: Azure Login (using individual secrets)
+        if: ${{ secrets.AZURE_CREDENTIALS == '' }}
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          # Optional: Use service principal secret if provided, otherwise tries certificate or managed identity
-          allow-no-subscriptions: false
+          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
 
       - name: Get Resource Group from Key Vault (if available)
         id: get-config
