--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,42 +109,49 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Validate Azure Secrets
+        env:
+          AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         run: |
           # Check for AZURE_CREDENTIALS (preferred method, matches engram pattern)
-          if [ -n "${{ secrets.AZURE_CREDENTIALS }}" ]; then
+          if [ -n "$AZURE_CREDENTIALS" ]; then
             echo "✅ Using AZURE_CREDENTIALS for authentication"
+            echo "HAS_CREDS=true" >> $GITHUB_ENV
             exit 0
           fi
           
           # Fall back to individual secrets
-          if [ -z "${{ secrets.AZURE_CLIENT_ID }}" ]; then
+          if [ -z "$AZURE_CLIENT_ID" ]; then
             echo "❌ Error: AZURE_CLIENT_ID secret is not set"
             echo "   Please set AZURE_CREDENTIALS (preferred) or individual secrets"
             echo "   See .github/workflows/SECRETS.md for configuration instructions"
             exit 1
           fi
-          if [ -z "${{ secrets.AZURE_TENANT_ID }}" ]; then
+          if [ -z "$AZURE_TENANT_ID" ]; then
             echo "❌ Error: AZURE_TENANT_ID secret is not set"
             echo "   Please set AZURE_CREDENTIALS (preferred) or individual secrets"
             echo "   See .github/workflows/SECRETS.md for configuration instructions"
             exit 1
           fi
-          if [ -z "${{ secrets.AZURE_SUBSCRIPTION_ID }}" ]; then
+          if [ -z "$AZURE_SUBSCRIPTION_ID" ]; then
             echo "❌ Error: AZURE_SUBSCRIPTION_ID secret is not set"
             echo "   Please set AZURE_CREDENTIALS (preferred) or individual secrets"
             echo "   See .github/workflows/SECRETS.md for configuration instructions"
             exit 1
           fi
+          echo "HAS_CREDS=false" >> $GITHUB_ENV
           echo "✅ All required Azure secrets are configured (using individual secrets)"
       
       - name: Azure Login (using AZURE_CREDENTIALS)
-        if: ${{ secrets.AZURE_CREDENTIALS != '' }}
+        if: env.HAS_CREDS == 'true'
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
       
       - name: Azure Login (using individual secrets)
-        if: ${{ secrets.AZURE_CREDENTIALS == '' }}
+        if: env.HAS_CREDS != 'true'
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
