--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -173,17 +173,15 @@ jobs:
             fi
           fi
           # Use GitHub Secrets as fallback/defaults
-          # Note: Bicep uses ${envName}-api and ${envName}-worker where envName defaults to 'ctxEco-env'
-          # So actual Container App names are likely: ctxEco-env-api and ctxEco-env-worker
-          # Override via secrets if your deployment uses different names
+          # Actual Container App names in ctxeco-rg: ctxeco-api, ctxeco-worker
           echo "resourceGroup=${{ secrets.AZURE_RESOURCE_GROUP || 'ctxeco-rg' }}" >> $GITHUB_OUTPUT
-          echo "backendAppName=${{ secrets.AZURE_BACKEND_APP_NAME || 'ctxEco-env-api' }}" >> $GITHUB_OUTPUT
-          echo "workerAppName=${{ secrets.AZURE_WORKER_APP_NAME || 'ctxEco-env-worker' }}" >> $GITHUB_OUTPUT
+          echo "backendAppName=${{ secrets.AZURE_BACKEND_APP_NAME || 'ctxeco-api' }}" >> $GITHUB_OUTPUT
+          echo "workerAppName=${{ secrets.AZURE_WORKER_APP_NAME || 'ctxeco-worker' }}" >> $GITHUB_OUTPUT
 
       - name: Update Backend Container App
         env:
           RESOURCE_GROUP: ${{ steps.get-config.outputs.resourceGroup || secrets.AZURE_RESOURCE_GROUP || 'ctxeco-rg' }}
-          BACKEND_APP_NAME: ${{ steps.get-config.outputs.backendAppName || secrets.AZURE_BACKEND_APP_NAME || 'ctxEco-env-api' }}
+          BACKEND_APP_NAME: ${{ steps.get-config.outputs.backendAppName || secrets.AZURE_BACKEND_APP_NAME || 'ctxeco-api' }}
         run: |
           IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/opencontextgraph/backend:latest"
           
@@ -207,7 +205,7 @@ jobs:
       - name: Update Worker Container App
         env:
           RESOURCE_GROUP: ${{ steps.get-config.outputs.resourceGroup || secrets.AZURE_RESOURCE_GROUP || 'ctxeco-rg' }}
-          WORKER_APP_NAME: ${{ steps.get-config.outputs.workerAppName || secrets.AZURE_WORKER_APP_NAME || 'ctxEco-env-worker' }}
+          WORKER_APP_NAME: ${{ steps.get-config.outputs.workerAppName || secrets.AZURE_WORKER_APP_NAME || 'ctxeco-worker' }}
         run: |
           IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/opencontextgraph/backend:latest"
           
