feat(agents): Azure AI Foundry integration with MCP server
- Add MCP JSON-RPC router at /mcp with 8 tools
- Integrate Temporal workflows for generate_story/generate_diagram
- Provision Elena, Marcus, Sage agents with API key auth
- Add multi-model routing (gpt-5.2 → Claude → Gemini)
- Add ABAC security context with group claims
- Create agent definitions and architecture documentation
- Scripts read from env vars (no hardcoded keys)

Tools: search_memory, list_episodes, generate_story, generate_diagram,
       search_codebase, get_project_status, create_github_issue, trigger_ingestion

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -27,6 +27,9 @@ langgraph>=0.0.20
 
 # LLM Providers
 openai>=1.0.0
+# Azure AI Foundry (Agent Service) - Pinning for Project Endpoint Support
+azure-ai-projects==1.0.0b13
+azure-ai-agents>=1.0.0b1
 # google-genai>=0.1.0  # Optional: Gemini
 
 # ETL & Document Processing
