--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -27,8 +27,8 @@ langgraph>=0.0.20
 
 # LLM Providers
 openai>=1.0.0
-# Azure AI Foundry (Agent Service) - Pinning for Project Endpoint Support
-azure-ai-projects==1.0.0b13
+# Azure AI Foundry (Agent Service) - Using stable release
+azure-ai-projects>=1.0.0
 azure-ai-agents>=1.0.0b1
 # google-genai>=0.1.0  # Optional: Gemini
 
