--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
       - name: Install dependencies
         run: |
           cd backend
@@ -61,13 +61,15 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      
+
       - name: Build and push backend image
         uses: docker/build-push-action@v5
         with:
           context: ./backend
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/opencontextgraph/backend:latest
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/opencontextgraph/backend:latest
+            ghcr.io/${{ github.repository_owner }}/opencontextgraph/backend:${{ github.sha }}
 
   # Security Scan
   security-scan:
@@ -88,7 +90,7 @@ jobs:
         uses: anchore/scan-action@v3
         with:
           path: ./backend
-          fail-build: false  # Don't block deploy on scan for now
+          fail-build: false # Don't block deploy on scan for now
           severity-cutoff: high
 
   # Deploy to Azure Container Apps
@@ -107,7 +109,7 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Validate Azure Secrets
         env:
           AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
@@ -121,7 +123,7 @@ jobs:
             echo "HAS_CREDS=true" >> $GITHUB_ENV
             exit 0
           fi
-          
+
           # Fall back to individual secrets
           if [ -z "$AZURE_CLIENT_ID" ]; then
             echo "❌ Error: AZURE_CLIENT_ID secret is not set"
@@ -143,13 +145,13 @@ jobs:
           fi
           echo "HAS_CREDS=false" >> $GITHUB_ENV
           echo "✅ All required Azure secrets are configured (using individual secrets)"
-      
+
       - name: Azure Login (using AZURE_CREDENTIALS)
         if: env.HAS_CREDS == 'true'
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-      
+
       - name: Azure Login (using individual secrets)
         if: env.HAS_CREDS != 'true'
         uses: azure/login@v2
@@ -183,23 +185,20 @@ jobs:
           RESOURCE_GROUP: ${{ steps.get-config.outputs.resourceGroup || secrets.AZURE_RESOURCE_GROUP || 'ctxeco-rg' }}
           BACKEND_APP_NAME: ${{ steps.get-config.outputs.backendAppName || secrets.AZURE_BACKEND_APP_NAME || 'ctxeco-api' }}
         run: |
-          IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/opencontextgraph/backend:latest"
-          
+          # Use the specific SHA tag to force a revision update
+          IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/opencontextgraph/backend:${{ github.sha }}"
+
           echo "📦 Updating Container App: $BACKEND_APP_NAME"
           echo "   Resource Group: $RESOURCE_GROUP"
           echo "   Image: $IMAGE_TAG"
-          
-          echo "📦 Updating Container App: $BACKEND_APP_NAME"
-          echo "   Resource Group: $RESOURCE_GROUP"
-          echo "   Image: $IMAGE_TAG"
-          
+
           az containerapp update \
             --name "$BACKEND_APP_NAME" \
             --resource-group "$RESOURCE_GROUP" \
             --image "$IMAGE_TAG" \
             --query "properties.template.containers[0].image" \
             -o tsv
-          
+
           echo "✅ Backend Container App updated successfully"
 
       - name: Update Worker Container App
@@ -208,20 +207,20 @@ jobs:
           WORKER_APP_NAME: ${{ steps.get-config.outputs.workerAppName || secrets.AZURE_WORKER_APP_NAME || 'ctxeco-worker' }}
         run: |
           IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/opencontextgraph/backend:latest"
-          
+
           echo "📦 Updating Container App: $WORKER_APP_NAME"
           echo "   Resource Group: $RESOURCE_GROUP"
           echo "   Image: $IMAGE_TAG"
-          
+
           echo "📦 Updating Container App: $WORKER_APP_NAME"
           echo "   Resource Group: $RESOURCE_GROUP"
           echo "   Image: $IMAGE_TAG"
-          
+
           az containerapp update \
             --name "$WORKER_APP_NAME" \
             --resource-group "$RESOURCE_GROUP" \
             --image "$IMAGE_TAG" \
             --query "properties.template.containers[0].image" \
             -o tsv
-          
+
           echo "✅ Worker Container App updated successfully"
