--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -18,7 +18,7 @@ on:
 env:
     AZURE_RESOURCE_GROUP: ctxeco-rg
     AZURE_LOCATION: eastus2
-    SWA_APP_NAME: ctxEco-env-web
+    SWA_APP_NAME: ${{ secrets.AZURE_SWA_NAME || 'ctxEco-web' }}
 
 jobs:
     deploy-frontend:
