--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -76,3 +76,4 @@ jobs:
                   app_location: "frontend/dist"
                   output_location: ""
                   skip_app_build: true
+                                    deployment_environment: "production"
