--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -18,7 +18,7 @@ on:
 env:
     AZURE_RESOURCE_GROUP: ctxeco-rg
     AZURE_LOCATION: eastus2
-    SWA_APP_NAME: ${{ secrets.AZURE_SWA_NAME || 'ctxEco-web' }}
+    SWA_APP_NAME: ${{ secrets.AZURE_SWA_NAME || 'ctxeco-web' }}
 
 jobs:
     deploy-frontend:
@@ -27,53 +27,53 @@ jobs:
 
         steps:
             - name: Checkout code
-              uses: actions/checkout@v4
+                uses: actions/checkout@v4
 
             - name: Set up Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: "20"
-                  cache: "npm"
-                  cache-dependency-path: frontend/package-lock.json
+                uses: actions/setup-node@v4
+                with:
+                    node-version: "20"
+                    cache: "npm"
+                    cache-dependency-path: frontend/package-lock.json
 
             - name: Install dependencies
-              run: |
-                  cd frontend
-                  npm ci
+                run: |
+                    cd frontend
+                    npm ci
 
             - name: Build frontend
-              env:
-                  VITE_API_URL: ${{ secrets.VITE_API_URL || 'https://api.ctxeco.com' }}
-                  VITE_WS_URL: ${{ secrets.VITE_WS_URL || 'https://api.ctxeco.com' }}
-                  VITE_AZURE_AD_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
-                  VITE_AZURE_AD_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
-                  VITE_AZURE_AD_TENANT_DOMAIN: ${{ secrets.AZURE_AD_TENANT_DOMAIN }}
-                  VITE_AZURE_AD_EXTERNAL_ID: ${{ secrets.AZURE_AD_EXTERNAL_ID || 'false' }}
-                  VITE_AZURE_AD_EXTERNAL_DOMAIN: ${{ secrets.AZURE_AD_EXTERNAL_DOMAIN }}
-                  VITE_REDIRECT_URI: ${{ secrets.VITE_REDIRECT_URI || 'https://ctxeco.com' }}
-              run: |
-                  cd frontend
-                  npm run build
+                env:
+                    VITE_API_URL: ${{ secrets.VITE_API_URL || 'https://api.ctxeco.com' }}
+                    VITE_WS_URL: ${{ secrets.VITE_WS_URL || 'https://api.ctxeco.com' }}
+                    VITE_AZURE_AD_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
+                    VITE_AZURE_AD_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
+                    VITE_AZURE_AD_TENANT_DOMAIN: ${{ secrets.AZURE_AD_TENANT_DOMAIN }}
+                    VITE_AZURE_AD_EXTERNAL_ID: ${{ secrets.AZURE_AD_EXTERNAL_ID || 'false' }}
+                    VITE_AZURE_AD_EXTERNAL_DOMAIN: ${{ secrets.AZURE_AD_EXTERNAL_DOMAIN }}
+                    VITE_REDIRECT_URI: ${{ secrets.VITE_REDIRECT_URI || 'https://ctxeco.com' }}
+                run: |
+                    cd frontend
+                    npm run build
 
             - name: Azure Login
-              uses: azure/login@v2
-              with:
-                  creds: ${{ secrets.AZURE_CREDENTIALS }}
+                uses: azure/login@v2
+                with:
+                    creds: ${{ secrets.AZURE_CREDENTIALS }}
 
             - name: Get SWA Deployment Token
-              id: get_token
-              run: |
-                  TOKEN=$(az staticwebapp secrets list --name ${{ env.SWA_APP_NAME }} --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --query "properties.apiKey" -o tsv)
-                  echo "::add-mask::$TOKEN"
-                  echo "SWA_TOKEN=$TOKEN" >> $GITHUB_ENV
+                id: get_token
+                run: |
+                    TOKEN=$(az staticwebapp secrets list --name ${{ env.SWA_APP_NAME }} --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --query "properties.apiKey" -o tsv)
+                    echo "::add-mask::$TOKEN"
+                    echo "SWA_TOKEN=$TOKEN" >> $GITHUB_ENV
 
             - name: Deploy to Azure Static Web Apps
-              uses: Azure/static-web-apps-deploy@v1
-              with:
-                  azure_static_web_apps_api_token: ${{ env.SWA_TOKEN }}
-                  repo_token: ${{ secrets.GITHUB_TOKEN }}
-                  action: "upload"
-                  app_location: "frontend/dist"
-                  output_location: ""
-                  skip_app_build: true
-                                    deployment_environment: "production"
+                uses: Azure/static-web-apps-deploy@v1
+                with:
+                    azure_static_web_apps_api_token: ${{ env.SWA_TOKEN }}
+                    repo_token: ${{ secrets.GITHUB_TOKEN }}
+                    action: "upload"
+                    app_location: "frontend/dist"
+                    output_location: ""
+                    skip_app_build: true
+                    deployment_environment: "production"
