--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -2,8 +2,10 @@ name: Deploy Frontend
 
 on:
     push:
-        branches: [main]
-        paths: ["frontend/**"]
+        branches:
+            - main
+        paths:
+            - "frontend/**"
     workflow_dispatch:
         inputs:
             environment:
@@ -48,8 +50,8 @@ jobs:
                     VITE_AZURE_AD_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
                     VITE_AZURE_AD_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
                     VITE_AZURE_AD_TENANT_DOMAIN: ${{ secrets.AZURE_AD_TENANT_DOMAIN }}
-                    VITE_AZURE_AD_EXTERNAL_ID: ${{ secrets.AZURE_AD_EXTERNAL_ID || 'false' }}
-                    VITE_AZURE_AD_EXTERNAL_DOMAIN: ${{ secrets.AZURE_AD_EXTERNAL_DOMAIN }}
+                    VITE_AZURE_AD_EXTERNAL_ID: ${{ secrets.VITE_AZURE_AD_EXTERNAL_ID || 'false' }}
+                    VITE_AZURE_AD_EXTERNAL_DOMAIN: ${{ secrets.VITE_AZURE_AD_EXTERNAL_DOMAIN }}
                     VITE_REDIRECT_URI: ${{ secrets.VITE_REDIRECT_URI || 'https://ctxeco.com' }}
                 run: |
                     cd frontend
