feat(api): add telemetry/validation mock endpoints & restore sage llm clients
- Implemented /metrics/evidence and /validation endpoints for Golden Thread.

- Restored backend/llm with Claude Opus 4.5 & Gemini 3.0 clients.

- Updated architecture docs with new validation flow.

- Fixed missing dependencies in requirements.txt.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -30,6 +30,8 @@ openai>=1.0.0
 # Azure AI Foundry (Agent Service) - Using stable release
 azure-ai-projects>=1.0.0
 azure-ai-agents>=1.0.0b1
+anthropic>=0.18.0
+google-generativeai>=0.4.0
 # google-genai>=0.1.0  # Optional: Gemini
 
 # ETL & Document Processing
