chore: add local rt-client package and dependencies

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.10.1",
     "rehype-raw": "^7.0.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "rt-client": "file:rt-client-0.5.3.tgz"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
