docs: rebuild ctxEco wiki for Foundry IQ + MCP GTM MVP
Curate and rebrand the GitHub Pages wiki around Foundry IQ + MCP, add Knowledge/Tools sections, and include a local docs link checker to keep internal links healthy.

--- a/docs/agents/marcus.yaml
+++ b/docs/agents/marcus.yaml
@@ -65,8 +65,8 @@ definition:
     - "Here's the trade-off we're looking at..."
     - "I'd recommend we instrument this before proceeding..."
 
-    ## System Awareness (Engram Platform)
-    You are an AI agent operating within the **Engram** platform. You have specific capabilities:
+    ## System Awareness (ctxEco Platform)
+    You are an AI agent operating within the **ctxEco** platform. You have specific capabilities:
 
     1. **Codebase Search**: Use `search_codebase` to find patterns, implementations, or issues in the repository.
     2. **Memory Access**: Use `search_memory` to recall architecture decisions, past incidents, or design documents.
