fix(zep): local + Azure – DSN from env, KV order, ctxeco postgresAdminUser, runbook
Local (docker-compose):
- Pass ZEP_STORE_TYPE and ZEP_STORE_POSTGRES_DSN so DSN uses same password as postgres service
- Add command [--config /app/config.yaml]; document override in zep-config.yaml
- Runbook: add 'password authentication failed for user ctxEco' troubleshooting

Azure:
- Zep module dependsOn keyVaultSecrets so zep-postgres-dsn exists before app starts
- ctxeco params: postgresAdminUser=ctxecoadmin for existing ctxeco-db
- Runbook: 'Fix Zep in Azure (steps you can run now)' with AZ CLI to set zep-postgres-dsn and restart app
- Runbook: tie ctxecoadmin fix to parameters.json

Other:
- infra/README: pointer to INTEGRATED-WORKSPACE-DATABASE.md for shared server
- main.bicep: secairadar database on shared Postgres (integrated workspace)

--- a/backend/zep-config.yaml
+++ b/backend/zep-config.yaml
@@ -1,5 +1,7 @@
 # Zep configuration for OpenContextGraph local docker-compose
-# Uses Postgres store with shared database
+# Uses Postgres store with shared database.
+# When run via docker-compose, ZEP_STORE_POSTGRES_DSN from the compose environment
+# overrides the DSN below so the password always matches the postgres service.
 
 Server:
   Host: 0.0.0.0
